--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    {{{body}}}          {{!-- Todas las plantillas que queramos renderizar se van a inyectar acá --}}
+    <h1 style="color: blue;"><%- titulo %></h1>
+    <%- include('./meter.ejs') %>
 </body>
 </html>
