--- a/src/views/partials/form.hbs
+++ b/src/views/partials/form.hbs
@@ -1,18 +1,15 @@
 
 <form action="/productos" method="POST">
-    <div>
-        <label for="">Título</label>
-        <input type="text" name="title" placeholder="Título">
-    </div>
 
-    <div>
-        <label for="">Precio</label>
-        <input type="number" name="price" placeholder="Precio">
-    </div>
+    <label for="">Título</label>
+    <input type="text" name="title" placeholder="Título">
 
-    <div>
-        <label for="">Thumbnail</label>
-        <input type="text" name="thumbnail" placeholder="Thumbnail">
-    </div>
+    <label for="">Precio</label>
+    <input type="number" name="price" placeholder="Precio">
+
+    <label for="">Thumbnail</label>
+    <input type="text" name="thumbnail" placeholder="Thumbnail">
+
+    <input type="submit" value="Enviar">
 
 </form>
