--- a/eJS/src/views/form.ejs
+++ b/eJS/src/views/form.ejs
@@ -16,4 +16,6 @@
     </div>
 
     <input type="submit" value="Enviar" class="w-75 mx-auto bg-primary p-2 text-light fw-bold border-0" >
+    
+    <a href="/productos" class="text-center mt-3 text-decoration-none text-primary fw-bold">Ver Productos</a>
 </form>
