--- a/eJS/src/views/productos.ejs
+++ b/eJS/src/views/productos.ejs
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="w-50 mx-auto mt-5">
+    <div class="w-50 mx-auto mt-5 d-flex flex-column">
         <h1 class="text-primary text-center">Productos</h1>
 
         <% if(hasAny) { %> 
@@ -17,11 +17,15 @@
                     <li class="border-bottom border-primary border-3">
                         <span class="fw-bold">Producto:</span> <%= element.title %>  <br>
                         <span class="fw-bold">Precio:</span> <%= element.price %> <br>
-                        <span class="fw-bold">Thumbnail:</span> <%= element.thumbnail %> <br>
+                        <span class="fw-bold">Thumbnail:</span> <img src=<%= element.thumbnail %>> <br>
                     </li>
                 <% }) %>
             </ul>
-        <% } %> 
+        <% } else { %>
+            <p class="text-center mt-5 fw-bold" style="font-size: 20px">No hay productos</p>    
+        <% } %>
+        
+        <a href="/" class="mt-3 text-decoration-none text-primary fw-bold d-block text-center">Ir a Ingreso de productos</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
