--- a/pugJS/src/views/main.pug
+++ b/pugJS/src/views/main.pug
@@ -24,4 +24,7 @@ html(lang="en")
                     input(type="text" name="thumbnail" placeholder="Thumbnail")
 
                 input(type="submit" value="Enviar" class="w-75 mx-auto bg-primary p-2 text-light fw-bold border-0")
+            
+            <a href="/productos" class="text-center d-block my-3 text-decoration-none text-primary fw-bold">Ver Productos</a>
+
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
