--- a/public/plantilla.hbs
+++ b/public/plantilla.hbs
@@ -1,6 +1,7 @@
 
-<li class="border-bottom border-primary border-3">
-    <span class="fw-bold">Producto:</span> {{title}} <br>
-    <span class="fw-bold">Precio:</span> {{price}} <br>
-    <span class="fw-bold">Thumbnail: <img src={{thumbnail}} alt=""> <br>
-</li>
+<tr class="text-center">
+    <td>{{title}}</td>
+    <td>${{price}}</td>
+    <td><img src={{thumbnail}} alt="" class="w-25"></td>
+</tr>
+
